improved level counter drawing, fixed animation and attack timer reset